--- a/index.html
+++ b/index.html
@@ -13,31 +13,31 @@
 		<div class="category" tabindex="0"> Panel 3</div>
 		<div class="category" tabindex="0"> Panel 4</div>
 		<div class="category" tabindex="0"> Panel 5</div>
-		<div class="item" tabindex="0"> $200</div>
-		<div class="item" tabindex="0"> $200</div>
-		<div class="item" tabindex="0"> $200</div>
-		<div class="item" tabindex="0"> $200</div>
-		<div class="item" tabindex="0"> $200</div>
-		<div class="item" tabindex="0"> $400</div>
-		<div class="item" tabindex="0"> $400</div>
-		<div class="item" tabindex="0"> $400</div>
-		<div class="item" tabindex="0"> $400</div>
-		<div class="item" tabindex="0"> $400</div>
-		<div class="item" tabindex="0"> $600</div>
-		<div class="item" tabindex="0"> $600</div>
-		<div class="item" tabindex="0"> $600</div>
-		<div class="item" tabindex="0"> $600</div>
-		<div class="item" tabindex="0"> $600</div>
-		<div class="item" tabindex="0"> $800</div>
-		<div class="item" tabindex="0"> $800</div>
-		<div class="item" tabindex="0"> $800</div>
-		<div class="item" tabindex="0"> $800</div>
-		<div class="item" tabindex="0"> $800</div>
-		<div class="item" tabindex="0"> $1000</div>
-		<div class="item" tabindex="0"> $1000</div>
-		<div class="item" tabindex="0"> $1000</div>
-		<div class="item" tabindex="0"> $1000</div>
-		<div class="item" tabindex="0"> $1000</div>
+		<div class="item" tabindex="0" id="1_200"> <span class = "price">$200</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="2_200"> <span class = "price">$200</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="3_200"> <span class = "price">$200</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="4_200"> <span class = "price">$200</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="5_200"> <span class = "price">$200</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="1_400"> <span class = "price">$400</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="2_400"> <span class = "price">$400</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="3_400"> <span class = "price">$400</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="4_400"> <span class = "price">$400</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="5_400"> <span class = "price">$400</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="1_600"> <span class = "price">$600</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="2_600"> <span class = "price">$600</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="3_600"> <span class = "price">$600</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="4_600"> <span class = "price">$600</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="5_600"> <span class = "price">$600</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="1_800"> <span class = "price">$800</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="2_800"> <span class = "price">$800</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="3_800"> <span class = "price">$800</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="4_800"> <span class = "price">$800</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="5_800"> <span class = "price">$800</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="1_1000"> <span class = "price">$1000</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="2_1000"> <span class = "price">$1000</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="3_1000"> <span class = "price">$1000</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="4_1000"> <span class = "price">$1000</span><span class = "text_hidden">Panel</span></div>
+		<div class="item" tabindex="0" id="5_1000"> <span class = "price">$1000</span><span class = "text_hidden">Panel</span></div>
 	</div>
 	<script type="text/javascript" src="script.js"></script>
 </body>
